fix: the color of scrollbar and manage member modal

--- a/src/index.css
+++ b/src/index.css
@@ -4,26 +4,17 @@
   color-scheme: dark;
 }
 @theme{
-  --indigo-500: #6366f1;
-  --indigo-400: #818cf8;
-  --indigo-600: #4f46e5;
-
-  --gray-900: #0f172a;
-  --gray-800: #1e293b;
-  --gray-700: #334155;
-
-  --gray-100: #f1f5f9;
-  --gray-400: #94a3b8;
-  --gray-500: #64748b;
 
   --color-bg-primary: #0f172a; /* nền chính */
   --color-bg-secondary: #1e293b; /* card / sidebar */
   --color-bg-tertiary: #334155; /* hover */
   --color-bg-elevated: #2b3a52;
 
-  --color-primary: #6366f1;
-  --color-primary-hover: #818cf8;
-  --color-primary-active: #4f46e5;
+  --color-primary: #5b7cfa;
+  --color-primary-hover: #7c97ff;
+  --color-primary-active: #4c6ef5;
+
+  --color-scrollbar-thumb: rgba(148, 163, 184, 0.25);
 
   --color-secondary-hover: #263449;
   --color-elevated-hover: #344765;
@@ -41,7 +32,7 @@
   --color-bg-error: #ef44441a;
   --color-bg-info: #6366f11a;
 
-  --color-border-primary: var(--gray-700);
+  --color-border-primary: #334155;
   --color-border-success: #22c55e4d;
   --color-border-warning: #f59e0b4d;
   --color-border-error: #ef44444d;
@@ -52,6 +43,8 @@
   --color-bg-primary: #ffffff;
   --color-bg-secondary: #f8fafc;
   --color-bg-tertiary: #e2e8f0;
+
+  --color-scrollbar-thumb: rgba(124, 151, 255, 0.22);
 
   --color-text-primary: #0f172a;
   --color-text-secondary: #475569;
@@ -95,5 +88,26 @@ body{
 
   .animate-out{
     animation: dropdown-out 0.1s ease-in;
+  }
+
+  .scrollbar-custom{
+    &::-webkit-scrollbar{
+      width: 6px;
+      height: 6px;
+    }
+
+    &::-webkit-scrollbar-track{
+      background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb{
+      background: var(--color-text-muted);
+      border-radius: 999px;
+    }
+
+    &::-webkit-scrollbar-thumb:hover{
+      background-color: var(--color-text-secondary);
+    }
+
   }
 }
